# foodiez_backend

./: README.md  db.sqlite3  manage.py  pyproject.toml
foodies/: asgi.py  models.py  settings.py  urls.py  wsgi.py
foodiez/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
foodiez/migrations/: 0001_initial.py
